--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -122,7 +122,7 @@
   </mat-form-field>
 
   <mat-form-field class="textarea">
-    <textarea
+    <textarea formControlName="description"
       matInput
       placeholder="Description"
       maxlength="1500"
